src/css/intlTelInput.scss
/* ... */
//* Overrides for mobile popup.
.iti--fullscreen-popup {
  &.iti--container {
    background-color: rgba(0, 0, 0, 0.5);
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    position: fixed;
    padding: var(--iti-mobile-popup-margin);
    //* Short country lists should be vertically centred.
    display: flex;
    flex-direction: column;
    //* The country search input auto-focuses, so mobile keyboard appears, so stick to top (also because when filter countries down, the height changes and the vertical centring would make it jump around).
    justify-content: flex-start;
  }
  .iti__dropdown-content {
    display: flex;
    flex-direction: column;
    max-height: 100%;
    position: relative; //* Override needed in order to get full-width working properly.
  }
  .iti__country {
    padding: 10px 10px;
    //* Increase line height because dropdown copy is v likely to overflow on mobile and when it does it needs to be well spaced.
    line-height: 1.5em;
  }
}

.iti__flag {
  --iti-flag-offset: 0px;
  --iti-flag-width: #{$most-common-flag-width};
  --iti-flag-height: #{$most-common-flag-height};

  height: var(--iti-flag-height);
  width: var(--iti-flag-width);
  box-shadow: 0px 0px 1px 0px #888;
  background-image: var(--iti-path-flags-1x);
  background-repeat: no-repeat;
  background-position: var(--iti-flag-offset) 0;
  background-size: var(--iti-flag-sprite-width) var(--iti-flag-sprite-height);
}

//* Creates placeholders for flag widths.
@each $width in $unique-flag-widths {
  %flag-width-#{$width} {
    --iti-flag-width: #{$width};
  }
}

//* Creates placeholders for flag heights.
@each $height in $unique-flag-heights {
  %flag-height-#{$height} {
    --iti-flag-height: #{$height};
  }
}

@each $country-code, $values in $flags {
  $flag-width: map-get($values, width);
  $flag-height: map-get($values, height);
  $flag-offset: map-get($values, offset);

  .iti__#{$country-code} {
    @if $flag-width != $most-common-flag-width {
      @extend %flag-width-#{$flag-width};
    }
    @if $flag-height != $most-common-flag-height {
      @extend %flag-height-#{$flag-height};
    }
    --iti-flag-offset: #{$flag-offset};
  }
}

//* Empty state.
.iti__globe {
  background-image: var(--iti-path-globe-1x);
  background-size: contain;
  background-position: right;
  box-shadow: none;
  height: 19px;
}

//* Media query for high PPI/Retina Displays.
@media (min-resolution: 2x) {
  .iti__flag { background-image: var(--iti-path-flags-2x); }
  .iti__globe { background-image: var(--iti-path-globe-2x); }
}

